removed account create function from my-app and put into own behavior and fixed bug where email verification was not getting sent. updated def-verify page to hit node server to initialize trial start upon successful email verification. created page change middleware behavior to monitor page chagnes where action might be necessary such as agreements or payment issues.

--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -41,6 +41,8 @@
 <link rel="import" href="elements/guuey-account-display/guuey-account-display.html" />
 
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
+<link rel="import" href="behaviors/page-change-middleware.html" />
+<link rel="import" href="behaviors/account-create-behavior.html" />
 
 <link rel="import" href="styles/app-shell-styles.html" />
 
