--- a/src/pages/default/def-verify/dependencies.html
+++ b/src/pages/default/def-verify/dependencies.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
-
+<link rel="import" href="../../../../bower_components/iron-ajax/iron-ajax.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
