added firebase element to get home value in order to set payment object for a home used to initialize a trial period.

--- a/src/pages/default/def-verify/dependencies.html
+++ b/src/pages/default/def-verify/dependencies.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
+<link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/iron-ajax/iron-ajax.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
