--- a/src/pages/default/def-verify/def-verify.html
+++ b/src/pages/default/def-verify/def-verify.html
@@ -16,6 +16,11 @@
           on-error="handleError">
         </firebase-auth>
 
+        <firebase-document
+          id="userIndexDB"
+          app-name="main">
+        </firebase-document>
+
         <iron-ajax
           id="trialSetCall"
           handle-as="json"
@@ -287,11 +292,14 @@
                 }.bind(this));
             },
             startTrial:function(){
-              this.$.trialSetCall.body={
-                home:this.home
-              };
-              this.$.trialSetCall.url="http://localhost:3000/trial/starttrial";
-              this.$.trialSetCall.generateRequest();
+              this.$.userIndexDB.getStoredValue("/userIndex/"+this.user.uid+"/home")
+                .then(function(home){
+                  this.$.trialSetCall.body={
+                    home:home
+                  };
+                  this.$.trialSetCall.url="https://glacial-tor-36526.herokuapp.com/trial/starttrial";
+                  this.$.trialSetCall.generateRequest();
+                }.bind(this))
             }
         });
     </script>
